# pymorph

./: LICENSE  README.md  pyproject.toml  sample.py
pymorph/: transpile.py
tests/unit/: test_main.py
